--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-  <header>
-    <!-- <div class="line">
+    <header>
+      <!-- <div class="line">
       <div class="img1">
         <img src="./img/img1.png" alt="">
       </div>
@@ -25,61 +25,61 @@
     <div class="ghibli">G H I B L I</div>
 
     </div>-->
-    <div class="titleHeader">
-      <img class="imgd" src="./img/imgd.png" alt="">
-      <img class="img0" src="./img/img0.png" alt="">
-      <img class="imgd-1" src="./img/imgd.png" alt="">
-    </div>
+      <div class="titleHeader">
+        <img class="imgd" src="./img/imgd.png" alt="">
+        <img class="img0" src="./img/img0.png" alt="">
+        <img class="imgd-1" src="./img/imgd.png" alt="">
+      </div>
 
 
 
-  </header>
-  <nav>
-    <div class="menu">
-      <ul>
-        <select class="btnMenu" id="selectProducer" class="select">
-          <option value="seleccionar">PRODUCER</option>
-          <option value="all" class="filterProducer">All</option>
-          <option value="Isao Takahata" class="filterProducer">Isao Takahata</option>
-          <option value="Hayao Miyazaki" class="filterProducer">Hayao Miyazaki</option>
-          <option value="Toru Hara" class="filterProducer">Toru Hara</option>
-          <option value="Toshio Suzuki" class="filterProducer">Toshio Suzuki</option>
-          <option value="Yoshiaki Nishimura" class="filterProducer">Yoshiaki Nishimura</option>
-        </select>
+    </header>
+    <nav>
+      <div class="menu">
+        <ul>
+          <select class="btnMenu" id="selectProducer" class="select">
+            <option disabled selected >PRODUCER</option>
+            <option value="all" class="filterProducer">All</option>
+            <option value="Isao Takahata" class="filterProducer">Isao Takahata</option>
+            <option value="Hayao Miyazaki" class="filterProducer">Hayao Miyazaki</option>
+            <option value="Toru Hara" class="filterProducer">Toru Hara</option>
+            <option value="Toshio Suzuki" class="filterProducer">Toshio Suzuki</option>
+            <option value="Yoshiaki Nishimura" class="filterProducer">Yoshiaki Nishimura</option>
+          </select>
 
 
-        <select class="btnMenu" id="alphabeticalOrder" class="select">
-          <option value="alphabetical_order" id="1">ALPHABETICAL ORDER</option>
-          <option value="A-Z" class="alphabetical">A-Z</option>
-          <option value="Z-A" class="alphabetical">Z-A</option>
+          <select class="btnMenu" id="alphabeticalOrder" class="select">
+            <option value="alphabetical_order" id="1">ALPHABETICAL ORDER</option>
+            <option value="A-Z" class="alphabetical">A-Z</option>
+            <option value="Z-A" class="alphabetical">Z-A</option>
 
-        </select>
-        <button class="btnMenu" type="button" id="btnTop">MOVIES TO 10</button>
-        <button class="btnMenu" type="button" id="btnCurious">CURIOUS FACTS</button>
+          </select>
+          <button class="btnMenu" type="button" id="btnTop">MOVIES TO 10</button>
+          <button class="btnMenu" type="button" id="btnCurious">CURIOUS FACTS</button>
+        </ul>
+
+      </div>
+    </nav>
+
+    <main>
+
+      <div id="insertPoster"></div>
+
+
+
+    </main>
+  </div>
+    <footer>
+      <img id="imgFooter" src="./img/imgFooter.png" alt="img footer">
+      <ul class="Names">
+        <li class="created">CreatedBy</li>
+        <li id="nameCM">Caro Raquel & Mariana Magallanes</li>
       </ul>
-
-    </div>
-  </nav>
-
-  <main>
-
-    <div id="insertPoster"></div>
-
-
-
-  </main>
-  <footer>
-    <img id="imgFooter" src="./img/imgFooter.png" alt="img footer">
-    <ul class="Names">
-      <li class="created">CreatedBy</li>
-      <li id="nameCM">Caro Raquel & Mariana Magallanes</li>
-
-    </ul>
 
   </footer>
 
   <script src="main.js" type="module"></script>
-
+  
 </body>
 
 
