--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       <script src="main.js" type="module"></script>
     </main>
 <footer>
-  <span> Proyecto creado por Maria Y Brina </span>
+  <span> Proyecto creado por Maria Y Brina Telf 4556-8765 </span>
 </footer>
 
 </body>
