--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <section id="encabezado"> 
         <div class="buscar" id="input-buscar">
         <label for="name"> </label>
-        <input type="text" id="inputBuscar" maxlength="15" placeholder="nombre">
+        <input type="text" id="inputBuscar" maxlength="15" placeholder="name">
         </div>
         
         <label id="ordenado" for="orden">Order</label>
@@ -51,7 +51,7 @@
       <script src="main.js" type="module"></script>
     </main>
 <footer>
-  <span> Proyecto creado por Maria Y Brina Telf 4556-8765 </span>
+  <span> Proyecto creado por Maria Y Brina Telf 455-8765 </span>
 </footer>
 
 </body>
