--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,31 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="img/favico.ico"/>
+    <script src="https://kit.fontawesome.com/67082df0e6.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <header>
+        <img src="img/studioGhibli.jpg" alt="">
+        <div id="actions">
+          <div id="search-bar">
+            <input type="text" id="film-title" >
+            <button id="search-btn"><i id="search-icon" class="fa-solid fa-magnifying-glass"></i></button>
+          </div>
+          <select id="opciones" name="opciones">
+            <option value="opcion1">A-Z</option>
+            <option value="opcion2">Z-A</option>
+            <option value="opcion3">FIRST-LAST</option>
+            <option value="opcion3">LAST-FIRST</option>
+          </select>
+        </div>
+      </header>
+      <main>
+        <div id="content">
+        </div>
+      </main>
+    </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
