feat: sort function

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,8 @@
             <input type="text" id="film-title" >
             <button id="search-btn"><i id="search-icon" class="fa-solid fa-magnifying-glass"></i></button>
           </div>
-          <select id="opciones" name="opciones">
-            <option value="opcion1">A-Z</option>
-            <option value="opcion2">Z-A</option>
-            <option value="opcion3">FIRST-LAST</option>
-            <option value="opcion3">LAST-FIRST</option>
-          </select>
+            <button id="sort-asc">A-Z</button>
+            <button id="sort-desc">Z-A</button>
         </div>
       </header>
       <main>
