--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <button id="search-btn"><i id="search-icon" class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div id="buttons">
-          <button id="stats-btn">Score</button>
+          <button id="stats-btn">Stats</button>
           <button id="sort-asc">A-Z</button>
           <button id="sort-desc">Z-A</button>
         </div>
