chore: footer links

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
       </div>
     </main>
   </div>
+  <footer>
+    <p>Data Lovers - desarrollado por <a href="https://linkedin.com/in/valenlopezvega" target="_blank">Valentina López</a> - <a href="https://github.com/ValenLopezVega/data-lovers" target="_blank">Código fuente</a> </p>
+  </footer>
   <script defer src="main.js" type="module"></script>
 </body>
 
