feat: pwa config files

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Studio Ghibli movies">
   <title>Data Lovers</title>
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="icon" type="image/x-icon" href="img/favico.ico" />
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 </head>
 
 <body>
