--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Studio Ghibli movies">
-  <meta name="theme-color" content="##901D1D"/>
+  <meta name="theme-color" content="#901D1D"/>
   <title>Data Lovers</title>
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
